Fixed inline editing to as to not remove image and location details

--- a/mystyles.css
+++ b/mystyles.css
@@ -50,3 +50,17 @@ input.new-todo::-webkit-input-placeholder {
 .todo-list li .destroy {
     display: block;
 }
+
+.additioninfo {
+    white-space: pre-line;
+    word-break: break-all;
+    padding: 0px 60px 15px 15px;
+    margin-left: 45px;
+    display: block;
+    line-height: 1.2;
+    transition: color 0.4s;
+}
+
+.todo-list li label  {
+    padding-bottom: 0px;
+}
